--- a/Common/Components/Image.razor.css
+++ b/Common/Components/Image.razor.css
@@ -2,3 +2,8 @@
     height: inherit;
     width: inherit;
 }
+
+.inline {
+    height: calc(var(--fontsize) * 1.125);
+    vertical-align: text-top;
+}
