--- a/Common/Components/NavAction.razor
+++ b/Common/Components/NavAction.razor
@@ -13,7 +13,7 @@
 }
 else
 {
-    <a class=@_builder aria-label=@Label href=@Uri target=@(IsExternal ? "_blank" : null)>
+    <a class=@_builder aria-label=@Label href=@Location target=@(IsExternal ? "_blank" : null)>
         <Activator Model=Activator>
             @ChildContent
         </Activator>
@@ -24,7 +24,7 @@ else
     [Parameter, EditorRequired]
     public string Label { get; set; }
     [Parameter]
-    public string? Uri { get; set; }
+    public string? Location { get; set; }
     [Parameter]
     public bool IsExternal { get; set; }
     [Parameter]
@@ -37,7 +37,7 @@ else
 
     protected override void OnInitialized()
     {
-        _ = _builder.Append("common__navaction");
+        _ = _builder.Append("common__navaction").Append(Activator.Class);
         base.OnInitialized();
 
         if (IsExternal) Activator.EndIcon = IconPath.OpenInNew;
