--- a/Common/Components/Templates/NavTemplate.razor
+++ b/Common/Components/Templates/NavTemplate.razor
@@ -1,7 +1,7 @@
 ﻿@using Common.Models
 @inherits BaseComponent
 
-<NavAction Class=@Class Label=@Model.Uri.Label Uri=@Model.Uri.ToString() IsExternal=Model.Uri.IsExternal Activator=Model.Activator Action=Model.Action>
+<NavAction Label=@Model.Uri.Label Location=@Model.Uri.Location IsExternal=Model.Uri.IsExternal Activator=Model.Activator Action=Model.Action>
     @Model.Uri.Content
 </NavAction>
 
