--- a/ABM.Paie.Formation/wwwroot/css/app.css
+++ b/ABM.Paie.Formation/wwwroot/css/app.css
@@ -122,7 +122,7 @@ code {
 }
 
 * {
-    font-family: 'Encode Sans SemiExpanded Medium';
+    font-family: var(--fontfamily);
 }
 
 html {
@@ -141,7 +141,7 @@ h2, .h2 {
 }
 
 h1, .h1, h2, .h2, h3, .h3 {
-    font-family: 'Permanent Marker Regular';
+    --fontfamily: 'Permanent Marker Regular';
 }
 
 .banner {
