--- a/Common/Components/Card.razor.css
+++ b/Common/Components/Card.razor.css
@@ -7,12 +7,13 @@
     color: var(--gray-dark);
     text-align: center;
     align-items: center;
-    padding: 0 0 0.5rem;
+    padding-bottom: 0.5rem;
     width: 15rem;
 }
 .common__card {
     & .common__paragraph {
-        margin: 0.5rem 0 0.25rem 0;
+        margin-top: 0.5rem;
+        margin-bottom: 0.25rem;
     }
 }
 
